@@ -48,9 +48,10 @@ LIBOPT=-lpqxx
 # *****************************************************************************
 
 
-EXECS=test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11
+EXECS=test1 test2 test3 test4 test5 test6 test7 test8 test9 test10 test11 \
+	test12
 EXECOBJS=test1.o test2.o test3.o test4.o test5.o test6.o test7.o test8.o \
-	test9.o test10.o test11.o
+	test9.o test10.o test11.o test12.o
 LIBOBJS=pg_connection.o pg_cursor.o pg_result.o pg_tablereader.o \
 	pg_tablestream.o pg_tablewriter.o pg_transaction.o 
 
@@ -92,6 +93,9 @@ test10: test10.o $(LIBNAME)
 test11: test11.o $(LIBNAME)
 	$(LD) $(LDFLAGS) -o $@ $< $(LIBOPT) $(LOADLIBES)
 
+test12: test12.o $(LIBNAME)
+	$(LD) $(LDFLAGS) -o $@ $< $(LIBOPT) $(LOADLIBES)
+
 
 $(LIBNAME): $(LIBOBJS)
 	$(AR) -r $(LIBNAME) $(LIBOBJS)
@@ -108,6 +112,7 @@ check: $(EXECS)
 	./test9 $(CONNSTR)
 	./test10 $(CONNSTR)
 	./test11 $(CONNSTR)
+	./test12 $(CONNSTR)
 
 clean: 
 	$(RM) $(LIBOBJS) $(EXECOBJS) a.out
